--- a/index.html
+++ b/index.html
@@ -18,9 +18,16 @@
           <li><a href="contact.html">Contact</a></li>
         </ul>
       </nav>
-      <footer>
-        copyright &copy;2024.
-      </footer>
+      <section id="main">
+        <h1>Home Page</h1>
+        <p>
+          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quidem nemo
+          placeat dolores reiciendis natus! Neque rem ea molestias repellat
+          voluptate sed? Quos, doloribus facilis tempora optio suscipit repellat
+          cumque voluptatum?
+        </p>
+      </section>
+      <footer>copyright &copy;2024.</footer>
     </div>
   </body>
 </html>
